[gd_scene load_steps=7 format=3 uid="uid://cmjpwpkbbf20o"]

[ext_resource type="Script" uid="uid://b8r8ryfxlorh1" path="res://UI/startMenu.gd" id="1_bo5hi"]
[ext_resource type="Texture2D" uid="uid://d010jcospqex4" path="res://art/UI/Banners/Carved_9Slides.png" id="2_8gori"]
[ext_resource type="AudioStream" uid="uid://gvxbpaccrdmi" path="res://sound/Music/Goblins_Den__Regular_.mp3" id="3_8gori"]
[ext_resource type="Texture2D" uid="uid://cp7oapq7yws3d" path="res://art/Deco/G_Idle 64 X 64.png" id="4_mgr47"]
[ext_resource type="Texture2D" uid="uid://c2mk7abve4gru" path="res://art/UI/Ribbons/Ribbon_Red_Connection_Left.png" id="5_cyaua"]
[ext_resource type="Texture2D" uid="uid://bju43nffmex5" path="res://art/UI/Pointers/01.png" id="6_34yav"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_bo5hi")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8gori")
volume_db = 3.333

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.99994
offset_top = -126.0
offset_right = -19.999939
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.4499986, 0.85)
texture = ExtResource("2_8gori")

[node name="GoldButton" type="Button" parent="."]
offset_left = 460.0
offset_top = 286.0
offset_right = 592.0
offset_bottom = 384.0

[node name="Label" type="Label" parent="GoldButton"]
layout_mode = 0
offset_left = 29.0
offset_top = 51.0
offset_right = 108.0
offset_bottom = 83.0
text = "200 Gold"

[node name="TextureRect" type="TextureRect" parent="GoldButton"]
layout_mode = 0
offset_left = 41.0
offset_top = 6.0
offset_right = 105.0
offset_bottom = 70.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_mgr47")

[node name="HPButton" type="Button" parent="."]
offset_left = 600.0
offset_top = 286.0
offset_right = 731.0
offset_bottom = 385.0

[node name="Label" type="Label" parent="HPButton"]
layout_mode = 0
offset_left = 41.0
offset_top = 53.0
offset_right = 86.0
offset_bottom = 85.0
text = "50 HP"

[node name="TextureRect" type="TextureRect" parent="HPButton"]
layout_mode = 0
offset_left = 38.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 80.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_cyaua")

[node name="ATKButton" type="Button" parent="."]
offset_left = 739.0
offset_top = 286.0
offset_right = 870.0
offset_bottom = 385.0

[node name="Label" type="Label" parent="ATKButton"]
layout_mode = 0
offset_left = 40.0
offset_top = 55.0
offset_right = 119.0
offset_bottom = 87.0
text = "25 ATK"

[node name="TextureRect" type="TextureRect" parent="ATKButton"]
layout_mode = 0
offset_left = 38.0
offset_top = 7.0
offset_right = 102.0
offset_bottom = 71.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_34yav")

[connection signal="pressed" from="GoldButton" to="." method="_on_gold_button_pressed"]
[connection signal="pressed" from="HPButton" to="." method="_on_hp_button_pressed"]
[connection signal="pressed" from="ATKButton" to="." method="_on_atk_button_pressed"]
